fix: Specificity of hovered buttons too high

--- a/assets/scss/layout/_form.scss
+++ b/assets/scss/layout/_form.scss
@@ -276,7 +276,7 @@ form br {
 
   @include my.themed-color('border-color', ('border'));
 
-  &:not(:disabled):hover {
+  &:where(:not(:disabled)):hover {
     @include my.hovered;
   }
 
